# academic_achievement_extraction

./: README.md  pyproject.toml  settings.py
acdemic_achievement_extraction/: ed_gov_skills_enrichment_input.json  legacy_extraction.py  main.py  raw_data.py
openai_argumentor/: openai_prompts.py  openai_requests.py
